# cosmoprimo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-extra.txt  requirements-extras.txt  setup.py
.github/workflows/: tests.yml
cosmoprimo/: __init__.py  astropy.py  axiclassy.py  bao_filter.py  bbks.py  camb.py  classy.py  constants.py  cosmology.py  dsclassy.py  eisenstein_hu.py  eisenstein_hu_nowiggle.py  eisenstein_hu_nowiggle_variants.py  fftlog.py  fiducial.py  heftcamb.py  interpolator.py  isitgr.py  isitide.py  jax.py  mgcamb.py  mochiclassy.py  negnuclassy.py  result.py  tabulated.py  utils.py
cosmoprimo/bindings/cobaya/: __init__.py  cosmoprimo.py  cosmoprimo.yaml
cosmoprimo/bindings/cosmosis/: cosmoprimo_interface.py  module.yaml
cosmoprimo/data/: abacus_cosmologies.csv
cosmoprimo/emulators/: README.md  __init__.py  base.py  conversion.py  emulated.py  hybrid.py  mixed.py  plotting.py
cosmoprimo/emulators/tests/: custom.py  test_base.py  test_mlp.py  test_taylor.py
cosmoprimo/emulators/tools/: README.md  __init__.py  base.py  jax.py  mlp.py  samples.py  taylor.py  utils.py
cosmoprimo/tests/: cosmosis_config.ini  cosmosis_values.ini  test_bao_filter.py  test_bindings.py  test_cosmology.py  test_fftlog.py  test_fiducial.py  test_interpolator.py  test_jax.py  test_tabulated.py  test_utils.py
doc/: conf.py  environment.yaml  index.rst
doc/api/: api.rst
doc/developer/: changes.rst  contributing.rst  documentation.rst  tests.rst
doc/user/: building.rst
nb/: README.md  bindings.ipynb  examples.ipynb
(+20 files in other folders)
